--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,8 @@ dev_dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/images/icons.png"
-  adaptive_icon_foreground: "assets/images/icons.png"
+  image_path: "assets/images/launch_icon.png"
+  adaptive_icon_foreground: "assets/images/launch_icon.png"
   adaptive_icon_background: "#000000"
 
 # For information on the generic Dart part of this file, see the
